--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <title>Midterminal Illness</title>
-<link rel="stylesheet" href="/assets/css/style.css">
+<link href="styles.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
     <div class="backgroundstart">
